tests/miniJava/neg/001791_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = 0 . java ( class java { public static void Main ( String [ ] java ) { { } } } 0 ) ; } }
